--- a/app/views/informes/_filtros_promedio.html.erb
+++ b/app/views/informes/_filtros_promedio.html.erb
@@ -86,7 +86,7 @@
         });
       </script>
 
-      <div id="chart" style="width: 560px; height: 300px;"></div>
+      <%#*<div id="chart" style="width: 560px; height: 300px;"></div>%>
 
 
       <p>El tiempo promedio de demora desde la fecha <%= @fecha_inicio %> hasta la fecha <%=  @fecha_fin %> de los expedientes es: </p>
