--- a/app/views/informes/index.html.erb
+++ b/app/views/informes/index.html.erb
@@ -10,5 +10,6 @@
     <p><%= link_to "Demora de expedientes", form_demora_path %></p>
     <p><%= link_to "Demanda de procesos", form_demanda_path %></p>
     <p><%= link_to "Rendimiento del Personal", form_rendimiento_path %></p>
+    <p><%= link_to "Radicacion de Expedientes", form_radicados_path %></p>
   </div>
 </section>
