--- a/app/views/consultas/show.html.erb
+++ b/app/views/consultas/show.html.erb
@@ -1,4 +1,4 @@
-<section>  
+<section>
   <div class="well">
     <%= link_to icon_tag('Consultar Expediente', :class => 'icon-arrow-left icon-white'), consultas_path, :class => 'btn primary' %>
   </div>
@@ -7,36 +7,39 @@
     <h1>Expediente</h1>
   </div>
 
+  <div class="row">
+    <div class="span6">
+      <p>
+        <b>Descripcion:</b>
+        <%= @expediente.descripcion %>
+      </p>
 
-  <p>
-    <b>Descripcion:</b>
-    <%= @expediente.descripcion %>
-  </p>
+      <p>
+        <b>Observacion:</b>
+        <%= @expediente.observacion %>
+      </p>
 
-  <p>
-    <b>Observacion:</b>
-    <%= @expediente.observacion %>
-  </p>
+      <p>
+        <b>Observacion Final:</b>
+        <%= @expediente.observacion_fin %>
+      </p>
 
-  <p>
-    <b>Observacion Final:</b>
-    <%= @expediente.observacion_fin %>
-  </p>
+      <p>
+        <b>Estado:</b>
+        <%= @expediente.estado %>
+      </p>
 
-  <p>
-    <b>Estado:</b>
-    <%= @expediente.estado %>
-  </p>
+      <p>
+        <b>Fecha Creacion:</b>
+        <%= @expediente.created_at %>
+      </p>
 
-  <p>
-    <b>Fecha Creacion:</b>
-    <%= @expediente.created_at %>
-  </p>
-
-  <p>
-    <b>Fecha Entrega:</b>
-    <%= @tiempo_entrega.present? ? @tiempo_entrega.strftime("%Y-%m-%d %H:%M") : 'No hay datos para mostrar'%>
-  </p>
+    </div>
+    <div class="span4 well" style="text-align: center">
+        <h3>Fecha de Entrega</h3>
+        <p><%= @tiempo_entrega.present? ? @tiempo_entrega.strftime("%d/%m/%Y %H:%M") : 'No hay datos para mostrar' %></p>
+    </div>
+  </div>
   <fieldset>
     <legend>Historial del Expediente</legend>
     <div class="row">
@@ -47,58 +50,58 @@
         </ul>
       </div>
       <div class="span11">
-        <div id="tabContent" class="tab-content">                
+        <div id="tabContent" class="tab-content">
           <div id="tab-tareas" class="tab-pane active">
             <table class="table table-striped table-bordered table-condensed">
               <thead>
-                <tr>
-                  <th>Tarea</th>
-                  <th>Fecha Inicio</th>
-                  <th>Fecha Fin</th>
-                  <th>Actividad</th>
-                  <th>Procedimiento</th>
-                  <th>Dependencia</th>
-                </tr>
+              <tr>
+                <th>Tarea</th>
+                <th>Fecha Inicio</th>
+                <th>Fecha Fin</th>
+                <th>Actividad</th>
+                <th>Procedimiento</th>
+                <th>Dependencia</th>
+              </tr>
               </thead>
               <tbody>
-                <% @tareas_expedientes.each do |f| %>
-                <tr>
-                  <td><%= f.tarea.nombre %></td>
-                  <td><%= f.fecha_inicio %></td>
-                  <td><%= f.fecha_fin %></td>
-                  <td><%= f.tarea.actividad.nombre %></td>
-                  <td><%= f.tarea.actividad.procedimiento.nombre %></td>
-                  <td><%= f.tarea.estructura.nombre %></td>
-                </tr>
-                <% end %>
+              <% @tareas_expedientes.each do |f| %>
+                  <tr>
+                    <td><%= f.tarea.nombre %></td>
+                    <td><%= f.fecha_inicio %></td>
+                    <td><%= f.fecha_fin %></td>
+                    <td><%= f.tarea.actividad.nombre %></td>
+                    <td><%= f.tarea.actividad.procedimiento.nombre %></td>
+                    <td><%= f.tarea.estructura.nombre %></td>
+                  </tr>
+              <% end %>
               </tbody>
             </table>
           </div>
           <div id="tab-tareas-realizar" class="tab-pane">
             <table class="table table-striped table-bordered table-condensed">
               <thead>
-                <tr>
-                  <th>Tarea</th>
-                  <th>Duracion</th>
-                  <th>Actividad</th>
-                  <th>Procedimiento</th>
-                  <th>Dependencia</th>
-                </tr>
+              <tr>
+                <th>Tarea</th>
+                <th>Duracion</th>
+                <th>Actividad</th>
+                <th>Procedimiento</th>
+                <th>Dependencia</th>
+              </tr>
               </thead>
               <tbody>
-                <% @tareas.each do |t| %>
-                <tr>
-                  <td><%= t.nombre %></td>
-                  <td><%= t.tiempo_ejecucion.to_s + " " + t.unidad_tiempo.simbolo %></td>
-                  <td><%= t.actividad.nombre %></td>
-                  <td><%= t.actividad.procedimiento.nombre %></td>
-                  <td><%= t.estructura.nombre %></td>
-                </tr>
-                <% end %>
+              <% @tareas.each do |t| %>
+                  <tr>
+                    <td><%= t.nombre %></td>
+                    <td><%= t.tiempo_ejecucion.to_s + " " + t.unidad_tiempo.simbolo %></td>
+                    <td><%= t.actividad.nombre %></td>
+                    <td><%= t.actividad.procedimiento.nombre %></td>
+                    <td><%= t.estructura.nombre %></td>
+                  </tr>
+              <% end %>
               </tbody>
             </table>
-          </div>                               
-        </div>              
+          </div>
+        </div>
       </div>
     </div>
 
@@ -106,15 +109,15 @@
 
 </section>
 <% content_for :javascripts do %>
-<script type="text/javascript">
-$('#tab a').click(function (e) {
-  e.preventDefault();
-  $(this).tab('show');
-});
+    <script type="text/javascript">
+        $('#tab a').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        });
 
-$('#tabDocs a').click(function (e) {
-  e.preventDefault();
-  $(this).tab('show');
-})
-</script>  
+        $('#tabDocs a').click(function (e) {
+            e.preventDefault();
+            $(this).tab('show');
+        })
+    </script>
 <% end %>
