--- a/app/views/tiempos_demorados/listar.html.erb
+++ b/app/views/tiempos_demorados/listar.html.erb
@@ -14,4 +14,8 @@
 <%= render 'reporte_606' %>
 <% end %>
 
+<p>Tiempo de Demora(+/-)<br />
+<font color="#FF0000"><b>[+]</b> Tiempo excedido al tiempo estimado de proceso</font><br />
+<font color="#00FF00"><b>[-]</b> Tiempo restante queda para culminar el proceso dentro del tiempo estimado</font>
+</p>
 </section>
