--- a/app/views/informes/_graph_demanda.html.erb
+++ b/app/views/informes/_graph_demanda.html.erb
@@ -1,10 +1,10 @@
 <script type="text/javascript">
   $(function() {
-<% if @proceso.present? %>
+<% if @procedimiento.present? %>
       //obtener la fecha de creacion
-  <%  date = @resultados[@proceso.id].map{ |c| c[1][1]} %>
+  <%#  date = @resultados[@procedimiento.id].map{ |c| c[1][1]} %>
+  <%  date = @fecha_inicio.to_datetime %>
       //convertir a datetime
-  <% date = date[0].to_datetime %>
       //obtener los dias del mes
   <% days = Time.days_in_month(date.month, date.year) %>
   <% weeks = date.total_weeks %>
@@ -15,7 +15,7 @@
           type: "column"
         },
         title: {
-          text: "Demanda de Procesos"
+          text: "Demanda de Procedimientos"
         },
           
         xAxis: {
@@ -32,7 +32,7 @@
   <% when 'dias' %>
             title: { text: 'Mes de <%= months[date.month] %>'},
             categories: [
-    <% (1..days).each do |m| %>     
+    <% (1..days).each do |m| %>
       <%= m.to_s + "," %>
     <% end %>
             ]
@@ -53,13 +53,13 @@
         },
         series: [
           {
-            name: '<%= @proceso.nombre %>',
+            name: '<%= @procedimiento.nombre %>',
   <% case @formato %>
   <% when 'meses' %>
               data: [
     <% (1..12).each do |m| %>
-      <% if @resultados[@proceso.id.to_i][m].present?  %>
-        <%= @resultados[@proceso.id.to_i][m][0].to_s + "," %>
+      <% if @resultados[@procedimiento.id.to_i][m].present?  %>
+        <%= @resultados[@procedimiento.id.to_i][m][0].to_s + "," %>
       <% else %>
         <%= 0.to_s + ","  %>
       <% end %>
@@ -67,16 +67,19 @@
               ]
   <% when 'semanas' %>
               data: [
-    <% (1..weeks).each do |m| %>     
-      <%  result = @resultados[@proceso.id.to_i].map { |key, c| key == m ? c[0] : 0.to_s }  %>
-      <%= result[0].to_s + ","   %>
+    <% (1..weeks).each do |m| %>
+      <% result = @resultados[@procedimiento.id].has_key?(m) ? @resultados[@procedimiento.id][m][0] : '0' %>
+      <%#  result = @resultados[@procedimiento.id.to_i].map { |key, c| key == m ? c[0] : 0.to_s }  %>
+      <%= result.to_s + ","   %>
     <% end %>
               ]
   <% when 'dias' %>
               data: [
     <% (1..days).each do |m| %>
-      <%  result = @resultados[@proceso.id.to_i].map { |key, c| Date.ordinal(date.year, key).day == m ? c[0] : 0.to_s }  %>
-      <%= result[0].to_s + ","   %>
+      <% result = @resultados[@procedimiento.id].has_key?(m) ? @resultados[@procedimiento.id][m][0] : '0' %>
+      <% #result = @resultados[@procedimiento.id.to_i].map { |key, c| Date.ordinal(date.year, key).day == m ? c[0] : 0.to_s }  %>
+  <%#=  @resultados[@procedimiento.id.to_i].map { |key, c| c[0] }  %>
+      <%= result.to_s + ","   %>
     <% end %>
               ]
   <%  else %>
@@ -96,7 +99,7 @@
 
       $('#chart').highcharts({
         title: {
-          text: "Demanda de Procesos"
+          text: "Demanda de Procedimientos"
         },
         xAxis: {
   <% case @formato %>
@@ -141,7 +144,7 @@
   <% when 'meses' %>
     <% @resultados.each do |key, value| %>
               {
-                name: '<%= key.present? ? Proceso.find(key).nombre : 'Auxiliar' %> ',
+                name: '<%= key.present? ? Procedimiento.find(key).nombre : 'Auxiliar' %> ',
                 data: [
       <% (1..12).each do |m| %>
         <% if value[m].present?  %>
@@ -156,7 +159,7 @@
   <% when 'semanas' %>
     <% @resultados.each do |key, value| %>
               {
-                name: '<%= key.present? ? Proceso.find(key).nombre : 'Auxiliar' %> ',
+                name: '<%= key.present? ? Procedimiento.find(key).nombre : 'Auxiliar' %> ',
                 data: [
       <% (1..weeks).each do |m| %>
         <% if value[m].present?  %>
@@ -172,7 +175,7 @@
   <% when 'dias' %>
     <% @resultados.each do |key, value| %>
               {
-                name: '<%= key.present? ? Proceso.find(key).nombre : 'Auxiliar' %> ',
+                name: '<%= key.present? ? Procedimiento.find(key).nombre : 'Auxiliar' %> ',
                 data: [
       <% (1..days).each do |m| %>
         <%  result = value.map { |k, c| Date.ordinal(fecha_ini.year, k).day == m ? c[0] : 0.to_s }  %>
