--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,10 +117,7 @@
               <li><%= link_to 'Personas Juridicas', personas_juridicas_path %></li>
               <li><%= link_to 'Organismos Internos', organismos_internos_path %></li>
               <li class="nav-header">Procesos</li>
-              <li><%= link_to 'MacroProcesos', macroprocesos_path %></li>
-              <li><%= link_to 'Procesos', procesos_path %></li>
-              <li><%= link_to 'SubProcesos', subprocesos_path %></li>
-              <li><%= link_to 'Procedimientos', procedimientos_path %></li>
+              <li><%= link_to 'Flujos de Trabajo', new_procedimientos_index_path %></li>
               <li class="nav-header">Expedientes</li>
               <li><%= link_to 'Expedientes', expedientes_path %></li>
               <li class="nav-header">Informes y consultas</li>
