--- a/app/views/tareas/_tipo_tarea.html.erb
+++ b/app/views/tareas/_tipo_tarea.html.erb
@@ -1,7 +1,7 @@
 <div class='tasks tab-pane' id="tab1">'
   <% if @tarea.new_record? %>
       <h4>Seleccione el tipo de
-        tarea <%= '(lógico pendiente)' if @tarea.anterior.present? && @tarea.anterior.logica_nueva? %></h4>
+        tarea <%= '(lógico pendiente)' if @tarea.tarea_anterior.present? && @tarea.tarea_anterior.logica_nueva? %></h4>
       <%= tipos_tareas(@tarea) %>
   <% else %>
     <%= mostrar_tipo_tarea(@tarea) %>
