--- a/app/views/informes/show_radicados.html.erb
+++ b/app/views/informes/show_radicados.html.erb
@@ -12,8 +12,10 @@
 
   <div class="clear"></div>
 
-  <div id="chart-porcentaje" style="width: 560px; height: 300px;"></div>
+  <div id="chart-finalizados" style="width: 560px; height: 300px;"></div>
+  <div class="clear"></div>
 
+  <div id="chart-porcentaje" style="width: 560px; height: 300px;"></div>
   <div class="clear"></div>
 
   <div id="chart-porcentaje-anulado" style="width: 560px; height: 300px;"></div>
