--- a/app/views/expedientes/index.html.erb
+++ b/app/views/expedientes/index.html.erb
@@ -14,7 +14,7 @@
         <th>Numero</th>
         <th>Procedimiento</th>
         <th>Ente</th>
-        <th>Usuario</th>
+        <!-- <th>Usuario</th> -->
         <th>Descripcion</th>
                 
 
@@ -22,13 +22,13 @@
       </tr>
       <% @expedientes.each do |expediente| %>
         <tr>
-          <td><%= expediente.numero %></td>          
+          <td><%= link_to expediente.numero, expediente %></td>
           <td>
             <span class="label label-info"><%= expediente.estado %></span>
-            <%= link_to expediente.procedimiento.nombre, expediente %>
+            <%#= link_to expediente.procedimiento.nombre, expediente %>
           </td>
           <td><%= expediente.ente.nombre_completo %></td>
-          <td><%= expediente.usuario_ingreso.nombre_completo %></td>
+          <!-- <td><%#= expediente.usuario_ingreso.funcionario.nombre_completo %></td> -->
           <td><%= truncate(expediente.descripcion, :length => 80) %></td>          
           
           <td>
