--- a/app/views/expedientes/_form.html.erb
+++ b/app/views/expedientes/_form.html.erb
@@ -28,7 +28,7 @@
 
       </div>      
       <div class="control-group">
-        <%= f.label :ente_id, 'Cédula/Nombre y Apellido', :class => 'control-label' %>
+        <%= f.label :ente_id, 'Cédula/Nombre y Apellido', :class => 'control-label', :id => 'ente_label' %>
         <div class="controls">          
           <div class="input-append">            
             <%= text_field_tag :expediente_numero_documento, nil, :style => 'width: 80px'  %>
