--- a/app/views/expedientes/show.html.erb
+++ b/app/views/expedientes/show.html.erb
@@ -47,18 +47,29 @@
               </tr>
             </table>
           </fieldset>
-          
-              <%= render 'logica_toolbar', 
-                :tarea_siguiente => @tarea_siguiente, 
+              <%= render 'logica_toolbar',
+                :tarea_siguiente => @tarea_siguiente,
                 :tarea_expediente_actual => @tarea_expediente_actual,
                 :expediente => @expediente,
-                :vista_tarea => @vista_tareas.first if @tarea_siguiente && @tarea_siguiente.es_logica? %>
+                :vista_tarea => @vista_tareas.first if @expediente.en_proceso? && @tarea_actual && @tarea_siguiente.es_logica? %>
+
+          <%= render 'traslado_toolbar',
+                     :tarea_siguiente => @tarea_siguiente,
+                     :tarea_expediente_actual => @tarea_expediente_actual,
+                     :expediente => @expediente,
+                     :vista_tarea => @vista_tareas.first if @expediente.en_proceso? && @tarea_actual && @tarea_siguiente.es_traslado? %>
+
+          <%= render 'archivado_toolbar',
+                     :tarea_siguiente => @tarea_siguiente,
+                     :tarea_expediente_actual => @tarea_expediente_actual,
+                     :expediente => @expediente,
+                     :vista_tarea => @vista_tareas.first if @expediente.en_proceso? && @tarea_actual && @tarea_siguiente.es_traslado? %>
 
         </div>
 
         <div id="tareas">          
           <%#= @vista_tareas.blank? %>
-          <%= render 'tareas', :vista_tareas => @vista_tareas unless @vista_tareas.blank? || (@tarea_siguiente && @tarea_siguiente.es_logica?) %>
+          <%= render 'tareas', :vista_tareas => @vista_tareas unless (!@expediente.en_proceso? || @vista_tareas.blank?) || (@tarea_siguiente && @tarea_siguiente.es_logica?) %>
         </div>
 
             <div class="span11 well-simple">
